# THOR

./: .clang-format  .clang-tidy  .flake8  .gitattributes  .gitignore  .gitmodules  .ipynb_strip_filter  .travis.yml  CMakeLists.txt  Makefile  Makefile.conf.template  README.md  alf_hel.ipynb  changelog.md  debugging_tools.org  physics_modules.org  programming_guide.md  slurm_batch_run.py
Alfrodull/: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
Alfrodull/ifile/: alf_ns_iso_g4.thr  alf_ns_iso_g4_l80.thr  alf_ns_iso_g4_r50.thr  alf_ns_iso_g4_r500.thr  alf_ns_iso_g5.thr  alf_ns_iso_g5_r50.thr  alf_ns_iso_g6.thr  alf_ns_iso_g6_r50.thr  alf_ns_iso_g6_r500.thr  alf_ns_noniso_g4.thr  alf_ns_noniso_g4_l80.thr  alf_ns_noniso_g4_r50.thr  alf_ns_noniso_g4_r500.thr  alf_ns_noniso_g5.thr  alf_ns_noniso_g5_r50.thr  alf_ns_noniso_g6.thr  alf_ns_noniso_g6_r50.thr  alf_only_iso_Tint0K.thr  alf_only_iso_Tint1000K.thr  alf_only_iso_Tint2000K.thr  alf_only_iso_Tint500K.thr  alf_spinup_iso_Tint0K.thr  alf_spinup_iso_Tint1000K.thr  alf_spinup_iso_Tint2000K.thr  alf_spinup_iso_Tint500K.thr  alf_spinup_iso_g4_l80.thr  alf_spinup_iso_g4_r50.thr  alf_spinup_iso_g5.thr  alf_spinup_iso_g6.thr  alf_spinup_noniso_g4_l80.thr  alf_spinup_noniso_g5.thr  alf_spinup_noniso_g6.thr  alf_spinup_rt.thr  alf_spinup_rt_clouds.thr  alf_w_rt500.thr  alf_w_rt500_CGS.thr  alf_w_rt500_clouds.thr  alf_w_rt500_clouds_f0p1.thr  alf_w_rt500_clouds_f0p5.thr  alf_w_rt500_denom.thr  (+17 more)
Alfrodull/ifile/wasp43b/: w43_r50_i_c001_Tm1530_A1p4e6_P10e7.thr  w43_r50_i_c001_Tm1530_A1p4e6_P2e7.thr  w43_r50_i_c001_Tm1530_A1p4e6_P5e7.thr  w43_r50_i_nc_Tm1530_A1p4e6_P2e7.thr  w43_r50_ni_c001_Tm1530_A1p4e6_P10e7.thr  w43_r50_ni_c001_Tm1530_A1p4e6_P2e7.thr  w43_r50_ni_c001_Tm1530_A1p4e6_P5e7.thr  w43_r50_ni_nc_Tm1530_A1p4e6_P10e7.thr  w43_r5_i_c001_Tm1530_A1p4e6_P10e7.thr  w43_r5_i_c001_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c001_Tm1530_A1p4e6_P2e7.thr  w43_r5_i_c001_Tm1530_A1p4e6_P5e7.thr  w43_r5_i_c1em10_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em11_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em12_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em15_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em18_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em20_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_c1em9_Tm1530_A1p4e6_P20e7.thr  w43_r5_i_nc_Tm1530_A1p2e6_P2e7.thr  w43_r5_i_nc_Tm1530_A1p4e6_P10e7.thr  w43_r5_i_nc_Tm1530_A1p4e6_P2e7.thr  w43_r5_i_nc_Tm1530_A1p4e6_P5e7.thr  w43_r5_i_nc_Tm1800_A1p4e6_P2e7.thr  w43_r5_ni_c000001_Tm1530_A1p0e6_P25e7.thr  w43_r5_ni_c00001_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c0001_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c0005_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c001_Tm1530_A1p0e6_P20e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P10e7_nsp.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P12e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P20e7_l20.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P20e7_nsp.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P25e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P2e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P30e7.thr  w43_r5_ni_c001_Tm1530_A1p4e6_P50e7.thr  (+23 more)
Alfrodull/ifile/wasp43b/newphy/: w43_r50_ni_c1em17_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c0p1em17_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c0p1em17_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c0p5em17_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c0p5em17_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c0p5em17_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c1em16_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c1em16_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c1em16_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c1em17_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c1em17_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c1em17_Tm1530_A1p4e6_P20e7.thr  w43_r5_ni_c1em17_Tm1530_A1p4e6_P5e7.thr  w43_r5_ni_c1em17_Tm1530_A1p4e6_P8e7.thr  w43_r5_ni_c1em18_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c1em18_Tm1530_A1p4e6_P12e7.thr  w43_r5_ni_c1em18_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c1em18_Tm1530_A1p4e6_P5e7.thr  w43_r5_ni_c1em18_Tm1530_A1p4e6_P8e7.thr  w43_r5_ni_c5em17_Tm1530_A1p4e6_P10e7.thr  w43_r5_ni_c5em17_Tm1530_A1p4e6_P15e7.thr  w43_r5_ni_c5em17_Tm1530_A1p4e6_P20e7.thr
Alfrodull/ifile/wasp43b/validation/: w43_r50_i_c1em17_Tm1530_A1p4e6_P8e7.thr  w43_r50_ni_c1em17_Tm1530_A1p4e6_P8e7.thr  w43_r50_ni_c1em17_Tm1530_A1p4e6_P8e7_nhts.thr  w43_r50_ni_nc_Tm1530_A1p4e6_P8e7.thr
Alfrodull/input/: cloud_sample_r5.h5  clouds_enstatite_r5.h5  clouds_enstatite_r50.h5  clouds_enstatite_r500.h5  opac_sample_SI_r5.h5  opac_sample_r5.h5  stellar_spectrum_wasp43_r5.h5  stellar_spectrum_wasp43_r50.h5  stellar_spectrum_wasp43_r500.h5
Alfrodull/input/wasp43b/: mixed_opac_sampling_r5_m-013.h5  opac_sample_SI_r5.h5
Alfrodull/pycpptest/: pycudacpptest.py  summy.cu  summy.h
Alfrodull/pylfrodull/src/: pylfrodull.cpp
Alfrodull/src/: alfrodull_engine.cu  alfrodullib.cu  gauss_legendre_weights.cpp  planck_table.cu  two_streams_radiative_transfer.cu
Alfrodull/src/inc/: alfrodull_engine.h  alfrodullib.h  calculate_physics.h  cloud_opacities.h  gauss_legendre_weights.h  integrate_flux.h  interpolate_values.h  math_helpers.h  opacities.h  opacities_helpers.h  physics_constants.h  physics_constants_si.h  planck_table.h  two_streams_radiative_transfer.h
Alfrodull/src/kernels/: calculate_physics.cu  integrate_flux.cu  interpolate_values.cu  math_helpers.cu
Alfrodull/src/opacities/: cloud_opacities.cu  opacities.cu
Alfrodull/tools/: alfrodull_input_tools.py  create_alf_stellar_spectrum.ipynb  create_cloud_file.ipynb  download_and_prepare_phoenix_spectrum.py  get_phoenix.ipynb  make_alf_cloud_data_from_dk.py  make_gauss_weights.py  opacities_to_si.py  phoenix.py  resample_stellar_spectrum.ipynb
Alfrodull/tools/devel/: BB_vs_stellar_flux_comparison.ipynb  debug_data_plot.ipynb
HD209458b-Hydro/: esp_diagnostics_HD209458-b.txt  esp_global_HD209458-b.txt  esp_output_grid_HD209458-b.h5  esp_output_planet_HD209458-b.h5  esp_write_log_HD209458-b.txt
docs/: Reduction sum test.ipynb  grid_notes.org
earth_hs/: esp_output_grid_Earth.h5  esp_output_planet_Earth.h5
ifile/: alf_wasp_no.thr  (+31 more)
src/physics/managers/multi/: CMakeLists.txt  Makefile
src/physics/managers/multi/src/: phy_modules.cu
(+220 files in other folders)
